--- a/WebL1/index.html
+++ b/WebL1/index.html
@@ -7,8 +7,17 @@
 
 <body>
     <nav>
-        <a href="index.html">contact</a>
-        <a href="index.html">home</a>
+        <a href="index.html">contact </a>
+        <a href="index.html">home </a>
         <a href="index.html">mousepads</a>
     </nav>
+
+    <div class="logo">
+        <img src="Images/logo.png" height="35px">
+    </div>
+    <section>
+
+
+    </section>
+
 </body>
