added a product image and a subgrid

--- a/WebL1/index.html
+++ b/WebL1/index.html
@@ -16,6 +16,11 @@
         <img src="Images/logo.png" height="35px">
     </div>
     <section>
+        <img class="images" src="Images/MousepadLarge.png">
+        <h1>Iridescent mousepad mousepad</h1>
+        <p>
+            mousepads, gaming mousepad. Office mousepads, for office smooth fast reaction mouse for game fortnite. play games with mousepad for gaming mouse buy cheap mousepad. quality. Office and work with best mousepad design mouse.
+        </p>
 
 
     </section>
