--- a/WebL1/index.html
+++ b/WebL1/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <nav>
-        <a href="index.html">contact </a>
+        <a href="contact.html">contact </a>
         <a href="index.html">home </a>
         <a href="index.html">mousepads</a>
     </nav>
