Added product page

--- a/WebL1/contact.html
+++ b/WebL1/contact.html
@@ -9,18 +9,20 @@
     <nav>
         <a href="contact.html">contact </a>
         <a href="index.html">home </a>
-        <a href="index.html">mousepads</a>
+        <a href="products.html">mousepads</a>
     </nav>
 
     <div class="logo">
-        <img src="Images/logo.png" height="35px">
+        <img class="logo" src="Images/logo.png">
     </div>
 
     <section>
         <div class="contact">
-        <h1>Phone: 022 454 7871</h1>
+            <h1>Phone: 022 454 7871</h1>
+            <h1>Email 1: ethan.reti@sbhsstudent.school.nz</h1>
+            <h1>Email 2: kiedus.cracknell@sbhsstudent.school.nz</h1>
         </div>
-    
+
     </section>
 
 </body>
