--- a/WebL1/index.html
+++ b/WebL1/index.html
@@ -9,11 +9,11 @@
     <nav>
         <a href="contact.html">contact </a>
         <a href="index.html">home </a>
-        <a href="index.html">mousepads</a>
+        <a href="products.html">mousepads</a>
     </nav>
 
     <div class="logo">
-        <img src="Images/logo.png" height="35px">
+        <img class="logo" src="Images/logo.png" >
     </div>
 
     <section>
