Fixed button issue, made background tileable/repeatable.

--- a/WebL1/products.html
+++ b/WebL1/products.html
@@ -19,22 +19,22 @@
     <section>
         <ul class="products">
             <li>
-                <img src="Images/MousepadLarge(inverted).png" class="pad">
+                <img src="Images/MousepadLarge(inverted).png">
                 <button>Buy $12.94</button>
             </li>
 
             <li>
-                <img src="Images/MousepadLarge(inverted).png" class="pad">
+                <img src="Images/MousepadLarge.png">
                 <button>Buy $12.94</button>
             </li>
 
             <li>
-                <img src="Images/MousepadLarge(inverted).png" class="pad">
+                <img src="Images/MousepadSmall(inverted).png" class="small">
                 <button>Buy $12.94</button>
             </li>
 
             <li>
-                <img src="Images/MousepadLarge(inverted).png" class="pad">
+                <img src="Images/MousepadSmall.png" class="small">
                 <button>Buy $12.94</button>
             </li>
 
