--- a/WebL1/contact.html
+++ b/WebL1/contact.html
@@ -3,6 +3,7 @@
 <head>
     <title>Iridescent</title>
     <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     </nav>
 
     <div class="logo">
-        <img class="logo" src="Images/logo.png">
+        <img class="logo" src="Images/logo.png" alt="Iridescent Logo">
     </div>
 
     <section>
